feat: criação da operação erro_servidor e melhorias ao receber uma mensagem inválida do servidor